--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,9 @@ pythondir = $(pkgdatadir)
 python_SOURCES = $(PACKAGE).py.in
 python_DATA = $(PACKAGE).py
 
+libexec_SOURCES = $(PACKAGE)-launch.in
+libexec_SCRIPTS = $(PACKAGE)-launch
+
 gladedir = $(pkgdatadir)
 glade_DATA = $(wildcard $(srcdir)/*.glade)
 
@@ -13,18 +16,28 @@ desktopdir = $(datadir)/applications
 desktop_SOURCES = $(PACKAGE).desktop.in
 desktop_DATA = $(PACKAGE).desktop
 
-CLEANFILES = $(PACKAGE) $(PACKAGE).py  $(PACKAGE).desktop
+dbusdir = $(datadir)/dbus-1/services
+dbus_SOURCES = $(PACKAGE).service.in
+dbus_DATA = $(PACKAGE).service
 
-EXTRA_DIST = $(bin_SOURCES) $(desktop_SOURCES) $(python_SOURCES) $(glade_DATA)
+CLEANFILES = $(bin_SCRIPTS) $(desktop_DATA) $(dbus_DATA) $(python_DATA)  $(libexec_SCRIPTS)
+
+EXTRA_DIST = $(bin_SOURCES) $(desktop_SOURCES) $(dbus_SOURCES) $(python_SOURCES) $(glade_DATA) $(libexec_SOURCES)
 
 
 %.desktop: $(srcdir)/%.desktop.in
 	sed -e "s,::PACKAGE::,$(PACKAGE)," -e "s,::ICONDIR::,$(pkgdatadir)," < $< > $@
 
+%.service: $(srcdir)/%.service.in
+	sed -e "s,::PACKAGE::,$(PACKAGE)," -e "s,::PREFIX::,$(prefix)," < $< > $@
+
 %.py: $(srcdir)/%.py.in
 	sed -e "s,::PACKAGE::,$(PACKAGE)," -e "s,::ASSETDIR::,$(pkgdatadir)," < $< > $@
 
 gnome-virt-manager: $(srcdir)/gnome-virt-manager.in
+	sed -e "s,::PACKAGE::,$(PACKAGE)," -e "s,::PYTHONDIR::,$(pkgdatadir)," < $< > $@
+
+gnome-virt-manager-launch: $(srcdir)/gnome-virt-manager-launch.in
 	sed -e "s,::PACKAGE::,$(PACKAGE)," -e "s,::PYTHONDIR::,$(pkgdatadir)," < $< > $@
 
 
