--- a/src/gnome-virt-manager.in
+++ b/src/gnome-virt-manager.in
@@ -1,3 +1,7 @@
 #!/bin/sh
 
-exec python "::PYTHONDIR::/::PACKAGE::.py"
+set -e
+
+dbus-send --session --dest="org.freedesktop.DBus" /org/freedesktop/DBus org.freedesktop.DBus.StartServiceByName string:'com.redhat.virt.manager.ui'
+
+dbus-send --session --dest="com.redhat.virt.manager.ui" /com/redhat/virt/manager/ui com.redhat.virt.manager.ui.show_host_summary
