Split gnome-virt-manager.py into separate modules, one per class

--- a/configure.ac
+++ b/configure.ac
@@ -3,5 +3,6 @@ AM_INIT_AUTOMAKE(gnome-virt-manager, 0.0.2)
 
 AC_OUTPUT(Makefile
           src/Makefile
+          src/virtManager/Makefile
           pixmaps/Makefile
           gnome-virt-manager.spec)
